--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 100px;
+    height: 15vh;
     background: #D8D8D8;
 }
 
@@ -9,7 +9,8 @@
 .content-left {
     width: 34%;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    float: left;
+    height: 70vh;
     background: #565555;
 }
 
@@ -18,8 +19,9 @@
 
 .content-mid {
     width: 66%;
+    float: right;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    height: 70vh;
     background: #B0B0B0;
 }
 
@@ -27,6 +29,7 @@
 
 .footer {
     width: 100%;
-    height: 100px;
+    height: 15vh;
     background: #3A3A3A;
+    clear: both;
 }
