--- a/level-1/step-3/step-3.css
+++ b/level-1/step-3/step-3.css
@@ -1,17 +1,29 @@
 /* Step-3 You can assign padding to all sides of a container by using the padding shorthand property. */
 
 .content-mid {
+  padding: 80px;
  
 }
 
 .content-mid-header {
+  height: 75px;
+  width: 100%;
   background: #444;
 }
 
 .content-container {
+  width: 100%;
+  height: 450px;
+  /* background-color: lightgray; */
 
 }
 
 .content {
   background: #D8D8D8;
+  padding: 20px;
+  width: 100%;
+  height: 400px;
+  text-align: center;
+  padding: 180px;
+
 }
